--- a/app/src/main/res/layout/activity_stock_market.xml
+++ b/app/src/main/res/layout/activity_stock_market.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/StockMarketAppBar"
-        android:background="@color/white">
+        android:background="@color/white"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
@@ -33,19 +34,19 @@
                     android:id="@+id/StockMarketToolBarCons">
                     <!--返回按钮-->
                     <ImageView
-                        android:layout_width="@dimen/d24"
-                        android:layout_height="@dimen/d24"
+                        android:layout_width="@dimen/d20"
+                        android:layout_height="@dimen/d20"
                         android:id="@+id/Back"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_marginLeft="@dimen/d16"
-                        android:background="@color/gray_e6"/>
+                        android:src="@drawable/black_left"/>
 
                     <!--查询按钮-->
                     <ImageView
-                        android:layout_width="@dimen/d24"
-                        android:layout_height="@dimen/d24"
+                        android:layout_width="@dimen/d20"
+                        android:layout_height="@dimen/d20"
                         android:id="@+id/Search"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -53,7 +54,7 @@
                         android:scaleType="centerCrop"
                         android:adjustViewBounds="true"
                         android:layout_marginRight="@dimen/d16"
-                        android:background="@color/gray_e6" />
+                        android:src="@drawable/black_search" />
 
                     <TextView
                         android:layout_width="0dp"
@@ -92,8 +93,10 @@
                         app:layout_constraintRight_toLeftOf="@id/Search"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:background="@color/gray_e6"
-                        app:layout_constraintHorizontal_bias="0.14" />
+                        app:layout_constraintHorizontal_bias="0.14"
+                        android:scaleType="fitCenter"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/stockleft"/>
 
                     <ImageView
                         android:layout_width="@dimen/d14"
@@ -103,8 +106,10 @@
                         app:layout_constraintRight_toLeftOf="@id/Search"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:background="@color/gray_e6"
-                        app:layout_constraintHorizontal_bias="0.86" />
+                        app:layout_constraintHorizontal_bias="0.86"
+                        android:scaleType="fitCenter"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/stockright" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.appcompat.widget.Toolbar>
 
@@ -155,7 +160,7 @@
                     android:gravity="center"/>
                 <GridView
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/d80"
+                    android:layout_height="@dimen/d84"
                     android:id="@+id/ValueGrid"
                     app:layout_constraintLeft_toRightOf="@id/NowPrice"
                     app:layout_constraintTop_toTopOf="@id/StockMarketValueCons"
@@ -165,26 +170,19 @@
                     android:numColumns="3"
                     android:stretchMode="columnWidth"
                     android:scrollbars="none"
-                    android:listSelector="@android:color/transparent"/>
+                    android:listSelector="@android:color/transparent"
+                    android:overScrollMode="never" />
 
                 <ImageView
-                    android:layout_width="@dimen/d8"
-                    android:layout_height="@dimen/d8"
+                    android:layout_width="@dimen/d12"
+                    android:layout_height="@dimen/d12"
                     android:id="@+id/MoreValue"
                     app:layout_constraintRight_toRightOf="@id/StockMarketValueCons"
                     app:layout_constraintTop_toBottomOf="@id/ValueGrid"
                     android:layout_marginRight="@dimen/d4"
-                    android:src="@color/gray_e6"/>
-
-                <GridView
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/d170"
-                    android:id="@+id/MoreValueGrid"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/MoreValue"
-                    android:numColumns="3"
-                    android:visibility="visible" />
+                    android:src="@drawable/rightdown"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true" />
 
                 <View
                     android:layout_width="0dp"
@@ -192,7 +190,7 @@
                     android:id="@+id/ValueSegLine"
                     app:layout_constraintLeft_toLeftOf="@id/StockMarketValueCons"
                     app:layout_constraintRight_toRightOf="@id/StockMarketValueCons"
-                    app:layout_constraintTop_toBottomOf="@id/MoreValueGrid"
+                    app:layout_constraintTop_toBottomOf="@id/MoreValue"
                     android:background="@color/gray_eee"
                     android:layout_marginTop="@dimen/d2"/>
 
@@ -238,14 +236,16 @@
                 </com.google.android.material.tabs.TabLayout>
 
                 <ImageView
-                    android:layout_width="@dimen/d20"
-                    android:layout_height="@dimen/d20"
+                    android:layout_width="@dimen/d18"
+                    android:layout_height="@dimen/d18"
                     android:id="@+id/SetImg"
                     app:layout_constraintRight_toRightOf="@id/StockMarketValueCons"
                     app:layout_constraintTop_toTopOf="@id/StyleTab"
                     app:layout_constraintBottom_toBottomOf="@id/StyleTab"
                     android:layout_marginRight="@dimen/d4"
-                    android:background="@color/gray_eee"/>
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"
+                    android:background="@drawable/set"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -266,7 +266,9 @@
                     app:layout_constraintTop_toTopOf="@id/MoreTab"
                     app:layout_constraintBottom_toBottomOf="@id/MoreTab"
                     app:layout_constraintLeft_toRightOf="@id/MoreTab"
-                    android:background="@color/gray_eee" />
+                    android:src="@drawable/moredown"
+                    android:scaleType="fitCenter"
+                    android:adjustViewBounds="true"/>
 
                 <FrameLayout
                     android:layout_width="0dp"
@@ -277,7 +279,7 @@
                     app:layout_constraintTop_toBottomOf="@id/StyleTab"
                     android:layout_marginLeft="@dimen/d4"
                     android:layout_marginRight="@dimen/d2"/>
-                
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
