--- a/app/src/main/res/layout/real_time_quotes_item.xml
+++ b/app/src/main/res/layout/real_time_quotes_item.xml
@@ -6,19 +6,20 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="28dp"
         android:id="@+id/LeftTag"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textSize="@dimen/s12"
-        android:textColor="@color/gray_666"
+        android:textColor="@color/black_333"
         android:text="Tag"
-        android:gravity="center" />
+        android:gravity="center"
+        android:layout_marginLeft="@dimen/d10"/>
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="28dp"
         android:id="@+id/RightValue"
         app:layout_constraintLeft_toRightOf="@id/LeftTag"
         app:layout_constraintRight_toRightOf="parent"
@@ -27,6 +28,7 @@
         android:textSize="@dimen/s12"
         android:textColor="@color/black_333"
         android:gravity="right|center_vertical"
-        android:text="value"/>
+        android:text="value"
+        android:layout_marginRight="@dimen/d10"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
