--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,7 @@
     <dimen name="d64">64dp</dimen>
     <dimen name="d70">70dp</dimen>
     <dimen name="d80">80dp</dimen>
+    <dimen name="d84">84dp</dimen>
     <dimen name="d90">90dp</dimen>
     <dimen name="d100">100dp</dimen>
     <dimen name="d104">104dp</dimen>
