--- a/app/src/main/res/layout/daily_stock_fragment.xml
+++ b/app/src/main/res/layout/daily_stock_fragment.xml
@@ -28,24 +28,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/MDSetSign"
         app:layout_constraintLeft_toLeftOf="@id/MDSetBg"
-        app:layout_constraintRight_toLeftOf="@id/MDSetImg"
+        app:layout_constraintRight_toRightOf="@id/MDSetBg"
         app:layout_constraintTop_toTopOf="@id/MDSetBg"
         app:layout_constraintBottom_toBottomOf="@id/MDSetBg"
         android:textSize="@dimen/s10"
         android:textColor="@color/black_333"
         android:text="MD"
         android:textStyle="bold"/>
-    <ImageView
-        android:layout_width="@dimen/d8"
-        android:layout_height="@dimen/d8"
-        android:id="@+id/MDSetImg"
-        app:layout_constraintLeft_toRightOf="@id/MDSetSign"
-        app:layout_constraintRight_toRightOf="@id/MDSetBg"
-        app:layout_constraintTop_toTopOf="@id/MDSetBg"
-        app:layout_constraintBottom_toBottomOf="@id/MDSetBg"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:src="@drawable/moredown"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -149,7 +138,8 @@
         android:textSize="@dimen/s10"
         android:textColor="@color/black_333"
         android:text="KDJ"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:tag="0"/>
     <ImageView
         android:layout_width="@dimen/d8"
         android:layout_height="@dimen/d8"
@@ -241,7 +231,8 @@
         android:textSize="@dimen/s10"
         android:textColor="@color/black_333"
         android:text="MACD"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:tag="0"/>
     <ImageView
         android:layout_width="@dimen/d8"
         android:layout_height="@dimen/d8"
