--- a/app/src/main/res/layout/fiveday_minute_stock_fragment.xml
+++ b/app/src/main/res/layout/fiveday_minute_stock_fragment.xml
@@ -5,12 +5,134 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/d20"
+        android:id="@+id/FiveDayMinuteSignBg"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/gray_FAF8F9" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/FiveDayAvePriceSign"
+        app:layout_constraintLeft_toLeftOf="@id/FiveDayMinuteSignBg"
+        app:layout_constraintTop_toTopOf="@id/FiveDayMinuteSignBg"
+        app:layout_constraintBottom_toBottomOf="@id/FiveDayMinuteSignBg"
+        android:textSize="@dimen/s10"
+        android:textColor="@color/orange_FF8C00"
+        android:text="均价:--"
+        android:layout_marginLeft="@dimen/d8" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/FiveDayRealPriceSign"
+        app:layout_constraintLeft_toRightOf="@id/FiveDayAvePriceSign"
+        app:layout_constraintTop_toTopOf="@id/FiveDayMinuteSignBg"
+        app:layout_constraintBottom_toBottomOf="@id/FiveDayMinuteSignBg"
+        android:textSize="@dimen/s10"
+        android:textColor="@color/black_333"
+        android:text="最新:--"
+        android:layout_marginLeft="@dimen/d8" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/FiveDayGainSign"
+        app:layout_constraintLeft_toRightOf="@id/FiveDayRealPriceSign"
+        app:layout_constraintTop_toTopOf="@id/FiveDayMinuteSignBg"
+        app:layout_constraintBottom_toBottomOf="@id/FiveDayMinuteSignBg"
+        android:textSize="@dimen/s10"
+        android:textColor="@color/red_up"
+        android:text="涨幅:--"
+        android:layout_marginLeft="@dimen/d8" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/FiveDayTimeSign"
+        app:layout_constraintLeft_toRightOf="@id/FiveDayGainSign"
+        app:layout_constraintTop_toTopOf="@id/FiveDayMinuteSignBg"
+        app:layout_constraintBottom_toBottomOf="@id/FiveDayMinuteSignBg"
+        android:textSize="@dimen/s10"
+        android:textColor="@color/black_333"
+        android:layout_marginLeft="@dimen/d8" />
+
     <com.gzyslczx.yslc.tools.yourui.myviews.MinuteChartView
         android:layout_width="0dp"
         android:layout_height="210dp"
-        android:id="@+id/chart"
-        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/FiveDayMinuteChart"
+        app:layout_constraintTop_toBottomOf="@id/FiveDayMinuteSignBg"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="12dp" />
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <!--成交量-->
+    <View
+        android:layout_width="0dp"
+        android:layout_height="@dimen/d20"
+        android:id="@+id/FiveDayVolumeSignBg"
+        app:layout_constraintLeft_toLeftOf="@id/FiveDayMinuteSignBg"
+        app:layout_constraintRight_toRightOf="@id/FiveDayMinuteChart"
+        app:layout_constraintTop_toBottomOf="@id/FiveDayMinuteChart"
+        android:background="@color/gray_FAF8F9"
+        android:layout_marginTop="@dimen/d2"/>
+    <View
+        android:layout_width="@dimen/d48"
+        android:layout_height="0dp"
+        android:id="@+id/FiveDayVolumeSetBg"
+        app:layout_constraintLeft_toLeftOf="@id/FiveDayVolumeSignBg"
+        app:layout_constraintTop_toTopOf="@id/FiveDayVolumeSignBg"
+        app:layout_constraintBottom_toBottomOf="@id/FiveDayVolumeSignBg"
+        android:background="@color/gray_e6" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/FiveDayVolumeSetSign"
+        app:layout_constraintLeft_toLeftOf="@id/FiveDayVolumeSetBg"
+        app:layout_constraintRight_toRightOf="@id/FiveDayVolumeSetBg"
+        app:layout_constraintTop_toTopOf="@id/FiveDayVolumeSetBg"
+        app:layout_constraintBottom_toBottomOf="@id/FiveDayVolumeSetBg"
+        android:textSize="@dimen/s10"
+        android:textColor="@color/black_333"
+        android:text="成交量"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/FiveDayVolumeSign"
+        app:layout_constraintLeft_toRightOf="@id/FiveDayVolumeSetBg"
+        app:layout_constraintTop_toTopOf="@id/FiveDayVolumeSetSign"
+        app:layout_constraintBottom_toBottomOf="@id/FiveDayVolumeSetSign"
+        android:layout_marginLeft="@dimen/d8"
+        android:textSize="@dimen/s10"
+        android:text="成交量:--"
+        android:textColor="@color/red_up"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/FiveDayVolumeCountSign"
+        app:layout_constraintLeft_toRightOf="@id/FiveDayVolumeSign"
+        app:layout_constraintTop_toTopOf="@id/FiveDayVolumeSetSign"
+        app:layout_constraintBottom_toBottomOf="@id/FiveDayVolumeSetSign"
+        android:layout_marginLeft="@dimen/d8"
+        android:textSize="@dimen/s10"
+        android:text="成交额:--"
+        android:textColor="@color/black_333"/>
+
+    <com.gzyslczx.yslc.tools.yourui.myviews.VolumeChartView
+        android:layout_width="0dp"
+        android:layout_height="@dimen/d100"
+        android:id="@+id/FiveDayMinuteVolumeChartView"
+        app:layout_constraintLeft_toLeftOf="@id/FiveDayMinuteChart"
+        app:layout_constraintRight_toRightOf="@id/FiveDayMinuteChart"
+        app:layout_constraintTop_toBottomOf="@id/FiveDayVolumeSignBg"
+        app:DottedLineColor="@color/gray_999"
+        app:BlackColor="@color/black"
+        app:GrayColor="@color/gray_eee"
+        app:UpColor="@color/red_up"
+        app:DownColor="@color/green_down"
+        app:equalColor="@color/gray_A9"
+        app:VolumeType="@integer/default_volume"
+        android:background="@color/white" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
