--- a/app/src/main/res/layout/minute_stock_fragment.xml
+++ b/app/src/main/res/layout/minute_stock_fragment.xml
@@ -145,80 +145,80 @@
         android:background="@color/white" />
 
     <!--KDJ-->
-    <View
-        android:layout_width="0dp"
-        android:layout_height="@dimen/d20"
-        android:id="@+id/KdjSignBg"
-        app:layout_constraintLeft_toLeftOf="@id/MinuteSignBg"
-        app:layout_constraintRight_toRightOf="@id/MinuteChartView"
-        app:layout_constraintTop_toBottomOf="@id/VolumeChartView"
-        android:background="@color/gray_FAF8F9"
-        android:layout_marginTop="@dimen/d2"/>
-    <View
-        android:layout_width="@dimen/d48"
-        android:layout_height="0dp"
-        android:id="@+id/KdjSetBg"
-        app:layout_constraintLeft_toLeftOf="@id/KdjSignBg"
-        app:layout_constraintTop_toTopOf="@id/KdjSignBg"
-        app:layout_constraintBottom_toBottomOf="@id/KdjSignBg"
-        android:background="@color/gray_e6" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/KdjSetSign"
-        app:layout_constraintLeft_toLeftOf="@id/KdjSetBg"
-        app:layout_constraintTop_toTopOf="@id/KdjSetBg"
-        app:layout_constraintBottom_toBottomOf="@id/KdjSetBg"
-        app:layout_constraintRight_toLeftOf="@id/KdjSetImg"
-        android:textSize="@dimen/s10"
-        android:textColor="@color/black_333"
-        android:text="KDJ"
-        android:textStyle="bold"/>
-    <ImageView
-        android:layout_width="@dimen/d8"
-        android:layout_height="@dimen/d8"
-        android:id="@+id/KdjSetImg"
-        app:layout_constraintLeft_toRightOf="@id/KdjSetSign"
-        app:layout_constraintTop_toTopOf="@id/KdjSetBg"
-        app:layout_constraintBottom_toBottomOf="@id/KdjSetBg"
-        app:layout_constraintRight_toRightOf="@id/KdjSetBg"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:src="@drawable/moredown" />
+<!--    <View-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="@dimen/d20"-->
+<!--        android:id="@+id/KdjSignBg"-->
+<!--        app:layout_constraintLeft_toLeftOf="@id/MinuteSignBg"-->
+<!--        app:layout_constraintRight_toRightOf="@id/MinuteChartView"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/VolumeChartView"-->
+<!--        android:background="@color/gray_FAF8F9"-->
+<!--        android:layout_marginTop="@dimen/d2"/>-->
+<!--    <View-->
+<!--        android:layout_width="@dimen/d48"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:id="@+id/KdjSetBg"-->
+<!--        app:layout_constraintLeft_toLeftOf="@id/KdjSignBg"-->
+<!--        app:layout_constraintTop_toTopOf="@id/KdjSignBg"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/KdjSignBg"-->
+<!--        android:background="@color/gray_e6" />-->
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/KdjSetSign"-->
+<!--        app:layout_constraintLeft_toLeftOf="@id/KdjSetBg"-->
+<!--        app:layout_constraintTop_toTopOf="@id/KdjSetBg"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/KdjSetBg"-->
+<!--        app:layout_constraintRight_toLeftOf="@id/KdjSetImg"-->
+<!--        android:textSize="@dimen/s10"-->
+<!--        android:textColor="@color/black_333"-->
+<!--        android:text="KDJ"-->
+<!--        android:textStyle="bold"/>-->
+<!--    <ImageView-->
+<!--        android:layout_width="@dimen/d8"-->
+<!--        android:layout_height="@dimen/d8"-->
+<!--        android:id="@+id/KdjSetImg"-->
+<!--        app:layout_constraintLeft_toRightOf="@id/KdjSetSign"-->
+<!--        app:layout_constraintTop_toTopOf="@id/KdjSetBg"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/KdjSetBg"-->
+<!--        app:layout_constraintRight_toRightOf="@id/KdjSetBg"-->
+<!--        android:scaleType="fitCenter"-->
+<!--        android:adjustViewBounds="true"-->
+<!--        android:src="@drawable/moredown" />-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/KSign"
-        app:layout_constraintLeft_toRightOf="@id/KdjSetBg"
-        app:layout_constraintTop_toTopOf="@id/KdjSetBg"
-        app:layout_constraintBottom_toBottomOf="@id/KdjSetBg"
-        android:layout_marginLeft="@dimen/d8"
-        android:textSize="@dimen/s10"
-        android:text="K:--"
-        android:textColor="@color/black_333"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/DSign"
-        app:layout_constraintLeft_toRightOf="@id/KSign"
-        app:layout_constraintTop_toTopOf="@id/KdjSetBg"
-        app:layout_constraintBottom_toBottomOf="@id/KdjSetBg"
-        android:layout_marginLeft="@dimen/d8"
-        android:textSize="@dimen/s10"
-        android:text="D:--"
-        android:textColor="@color/orange_f66e5c"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/JSign"
-        app:layout_constraintLeft_toRightOf="@id/DSign"
-        app:layout_constraintTop_toTopOf="@id/KdjSetBg"
-        app:layout_constraintBottom_toBottomOf="@id/KdjSetBg"
-        android:layout_marginLeft="@dimen/d8"
-        android:textSize="@dimen/s10"
-        android:text="J:--"
-        android:textColor="@color/pink_FF69B4"/>
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/KSign"-->
+<!--        app:layout_constraintLeft_toRightOf="@id/KdjSetBg"-->
+<!--        app:layout_constraintTop_toTopOf="@id/KdjSetBg"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/KdjSetBg"-->
+<!--        android:layout_marginLeft="@dimen/d8"-->
+<!--        android:textSize="@dimen/s10"-->
+<!--        android:text="K:&#45;&#45;"-->
+<!--        android:textColor="@color/black_333"/>-->
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/DSign"-->
+<!--        app:layout_constraintLeft_toRightOf="@id/KSign"-->
+<!--        app:layout_constraintTop_toTopOf="@id/KdjSetBg"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/KdjSetBg"-->
+<!--        android:layout_marginLeft="@dimen/d8"-->
+<!--        android:textSize="@dimen/s10"-->
+<!--        android:text="D:&#45;&#45;"-->
+<!--        android:textColor="@color/orange_f66e5c"/>-->
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/JSign"-->
+<!--        app:layout_constraintLeft_toRightOf="@id/DSign"-->
+<!--        app:layout_constraintTop_toTopOf="@id/KdjSetBg"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/KdjSetBg"-->
+<!--        android:layout_marginLeft="@dimen/d8"-->
+<!--        android:textSize="@dimen/s10"-->
+<!--        android:text="J:&#45;&#45;"-->
+<!--        android:textColor="@color/pink_FF69B4"/>-->
 
     <TextView
         android:layout_width="0dp"
