--- a/app/src/main/res/layout/five_range_fragment.xml
+++ b/app/src/main/res/layout/five_range_fragment.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="@dimen/d44"
+        android:layout_height="@dimen/d30"
         android:id="@+id/FiveRangeTag1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -41,7 +41,7 @@
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="@dimen/d44"
+        android:layout_height="@dimen/d30"
         android:id="@+id/FiveRangeTag2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/FiveRangeTag1"
@@ -75,7 +75,7 @@
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="@dimen/d44"
+        android:layout_height="@dimen/d30"
         android:id="@+id/FiveRangeTag3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/FiveRangeTag2"
@@ -109,7 +109,7 @@
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="@dimen/d44"
+        android:layout_height="@dimen/d30"
         android:id="@+id/FiveRangeTag4"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/FiveRangeTag3"
@@ -143,7 +143,7 @@
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="@dimen/d44"
+        android:layout_height="@dimen/d30"
         android:id="@+id/FiveRangeTag5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/FiveRangeTag4"
@@ -177,7 +177,7 @@
 
     <com.gzyslczx.yslc.tools.yourui.myviews.EntrustGainView
         android:layout_width="0dp"
-        android:layout_height="@dimen/d8"
+        android:layout_height="@dimen/d6"
         android:id="@+id/FiveRangeOfGain"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -189,7 +189,7 @@
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="@dimen/d44"
+        android:layout_height="@dimen/d30"
         android:id="@+id/FiveRangeTag6"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/FiveRangeOfGain"
@@ -223,7 +223,7 @@
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="@dimen/d44"
+        android:layout_height="@dimen/d30"
         android:id="@+id/FiveRangeTag7"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/FiveRangeTag6"
@@ -257,7 +257,7 @@
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="@dimen/d44"
+        android:layout_height="@dimen/d30"
         android:id="@+id/FiveRangeTag8"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/FiveRangeTag7"
@@ -291,7 +291,7 @@
 
     <TextView
         android:layout_width="0dp"
-        android:layout_height="@dimen/d44"
+        android:layout_height="@dimen/d30"
         android:id="@+id/FiveRangeTag9"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/FiveRangeTag8"
@@ -324,16 +324,16 @@
         android:gravity="center_vertical|right" />
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="@dimen/d44"
         android:id="@+id/FiveRangeTag0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/FiveRangeTag9"
-        app:layout_constraintRight_toLeftOf="@id/FiveRangePrice0"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/d30"
+        android:gravity="center"
+        android:text="买5"
         android:textColor="@color/black_333"
         android:textSize="@dimen/s12"
-        android:gravity="center"
-        android:text="买5"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/FiveRangePrice0"
+        app:layout_constraintTop_toBottomOf="@id/FiveRangeTag9" />
     <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
